--- a/css/style-network.css
+++ b/css/style-network.css
@@ -52,6 +52,9 @@
                 z-index: 1;
                 flex: 1 1 auto;
                 min-height: min-content;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
             }
 
             .profile {
@@ -126,7 +129,7 @@
                 flex-direction: column;
                 gap: 12px;
                 margin-top: 24px;
-                margin-bottom: 200px;
+                margin-bottom: 40px;
             }
 
             .link-card,
